--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js",
+    "dev": "env-cmd -f ./config/dev.env nodemon src/index.js -e js,hbs",
     "test": "env-cmd -f ./config/test.env jest --watch --runInBand"
   },
   "jest": {
@@ -17,11 +17,17 @@
   "dependencies": {
     "@sendgrid/mail": "^6.4.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.16.2",
+    "handlebars": "^4.1.2",
+    "hbs": "^4.0.4",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.2.7",
     "mongoose": "^5.6.3",
     "multer": "^1.4.1",
+    "path": "^0.12.7",
     "sharp": "^0.22.1",
     "validator": "^11.1.0"
   },
